<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="212dp"
        android:layout_height="39dp"
        android:text="@string/name_profile"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/last_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/last_name_text"
        android:layout_width="215dp"
        android:layout_height="34dp"
        android:layout_below="@id/name_text"
        android:text="@string/last_name_profile"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/email_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="216dp"
        android:layout_height="37dp"
        android:layout_below="@id/last_name_text"
        android:text="@string/email_profile"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dark_mode_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_text"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/dark_mode_button"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_below="@id/email_text"
        android:text="@string/change_theme_profile"
        app:layout_constraintBottom_toTopOf="@+id/return_profile_button"
        app:layout_constraintEnd_toStartOf="@+id/change_language_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <Button
        android:id="@+id/change_language_button"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_below="@id/dark_mode_button"
        android:text="@string/change_language_profile"
        app:layout_constraintBottom_toTopOf="@+id/return_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dark_mode_button"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <Button
        android:id="@+id/return_profile_button"
        android:layout_width="198dp"
        android:layout_height="48dp"
        android:layout_below="@id/dark_mode_button"
        android:contentDescription="@string/todo_profile"
        android:importantForAccessibility="no"
        android:text="@string/return_button_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo4"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>
