<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


    <EditText
        android:id="@+id/birth_date_edit_text"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/password_edit_text"
        android:autofillHints=""
        android:hint="@string/birth_date_register"
        android:inputType=""
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/name_edit_text"
        android:hint="@string/last_name_register"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/email_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_edit_text"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/last_name_edit_text"
        android:hint="@string/email_register"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/password_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_edit_text"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/email_edit_text"
        android:autofillHints=""
        android:hint="@string/password_register"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/birth_date_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:hint="@string/first_name_register"
        app:layout_constraintBottom_toTopOf="@+id/last_name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_button"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_below="@id/entrenador_check_box"
        android:text="@string/register_button"
        app:layout_constraintBottom_toTopOf="@+id/return_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrenador_check_box" />

    <Button
        android:id="@+id/return_register_button"
        android:layout_width="206dp"
        android:layout_height="48dp"
        android:layout_below="@id/entrenador_check_box"
        android:text="@string/return_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <CheckBox
        android:id="@+id/cliente_check_box"
        android:layout_width="97dp"
        android:layout_height="48dp"
        android:layout_below="@id/birth_date_edit_text"
        android:text="@string/user_register"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="@+id/entrenador_check_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <CheckBox
        android:id="@+id/entrenador_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cliente_check_box"
        android:text="@string/trainer_register"
        app:layout_constraintBottom_toTopOf="@+id/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cliente_check_box"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.509" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/guideline_register"
        android:importantForAccessibility="no"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="235dp" />

    <ImageView
        android:id="@+id/profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/name_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo4"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>
